app/assets/stylesheets/theme/umn.css.scss
$school_main_color: #7a0019;
$school_secondary_color: #ffd75f;
$school_dark_color: #404d5b;

.brand {
  background: image-url("logo.png");
  background-size: 100% 100%;
  width: 288px;
  height: 38px;
}

.navbar {
  .system-logo {
    background: image-url("sf-logo.png");
    background-size: 100% 100%;
    width: 260px;
    height: 48px;
  }

  .nav {
    .dropdown-menu {
      a:hover {
        color: white;
      }
    }

    .open .dropdown-toggle {
      background: $school_main_color;
      color: white;
    }
  }
}

.lt-ie9 .brand, .lt-ie9 .navbar .system-logo {
  background-image:none;
}

.btn-school {
  background: $school_main_color;
  color: white;

  &:active, &:visited {
    color: white;
  }

  &:hover {
    color: $body_text;
    background: $school_secondary_color;
    border: 1px solid $school_main_color;
  }
}

.btn-school-inverse {
  color: $school_main_color;
  background: $school_secondary_color;
  &:hover {
    color: white;
    background: $school_main_color;
  }
}

.btn-school-inverted {
  color: $school_main_color;
  background: $school_secondary_color;

  &:hover {
    color: white;
    background: $school_main_color;
  }
}

@media ( max-width: $screen-sm-min ) {
  .brand {
    width: 240px;
    height: 33px;
  }
}

// Kiosk version.
@media (max-width: 1024px) and (min-width: 768px) {
  .container {
    width: 100%;
  }
  .brand {
    width: 240px;
    height: 33px;
  }
  .system-logo {
    width: 208px !important;
    height: 38px !important;
  }
  .content {
    padding: 0 !important;
  }
  .home {
    margin-top: 0 !important;

    .home-content {
      padding: 10px 20px;
    }

    h3 {
      padding: 0 20px;
    }

    .rm-link {
      padding-left: 35px;
    }

    .contact-link {
      text-align: right;
      padding-right: 60px;
    }
  }
  .study-results {
    padding: 25px !important;
    .study .field {
      font-size: 14px !important;
    }
    .study .important {
      font-size: 16px !important;
    }
  }

  footer, .nav-for-researchers {
    display: none !important;
  }
  .navbar-nav .dropdown {
    display: none !important;
  }
}

h3 {
  font-size: 1.5rem;
}

